# pipeline40

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  README.md  check_colors.py  check_final_columns.py  check_sct_ref.py  check_warehouse_monthly.py  debug_warehouse_data.py  debug_warehouse_monthly.py  pyproject.toml  run_full_pipeline.bat  run_full_pipeline.ps1  run_full_pipeline.sh  run_pipeline.py  verify_patch.py  verify_rollback.py  verify_sct_position.py  verify_warehouse_monthly.py
archive/old_reports/: COLOR_VALIDATION_REPORT.md  FINAL_VERIFICATION_SUMMARY.md  HVDC Pipeline 작업 진행 보고서.MD  PIPE1STSTAGE.MD  PIPELINE_EXECUTION_REPORT_20251019_230853.md  VERIFICATION_REPORT.md
archive/old_scripts/: analyze_color_issue.py  analyze_sorting_issue.py  apply_anomaly_colors.py  check_current_state.py  check_master_columns.py  diagnose_color_in_empty_cells.py  generate_verification_report.py  verify_colors_applied.py  verify_derived_columns.py  verify_master_no_sorting.py  verify_raw_vs_synced.py
archive/original_pipe1/: data_synchronizer.py
archive/planning_docs/: P7.MD
config/: pipeline_config.yaml  project_profile.yaml  stage2_derived_config.yaml
data/anomaly/: HVDC_anomaly_report.json
docs/: BALANCED_BOOST_QUICKSTART.md  INDEX.md  README.md  README_FullPack.md  SESSION_SUMMARY.md
scripts/: PATCH.MD  PATCH3.MD  README.md  STACK.MD  WHINOUT.MD  hvdc_excel_reporter_final_sqm_rev_ORIGIN.py  stack status.md
scripts/core/: README.md  (+9 more)
tests/: baseline_stats.json  test_basic.py  test_data_parser.py  test_stack_and_sqm.py  test_stage3_total_sqm.py
(+121 files in other folders)
