[project]
name = "cursor-project-setting"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["pandas","openpyxl","XlsxWriter"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
py_version = 313

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyupgrade]
keep-runtime-typing = true
